php/include/pdf_oxide.h

typedef struct FfiCharList FfiCharList;
typedef struct FfiTableList FfiTableList;
typedef struct FfiTextLineList FfiTextLineList;
typedef struct FfiWordList FfiWordList;
typedef struct Pdf Pdf;
typedef struct PdfDocument PdfDocument;
void free_string(char *ptr);
void free_bytes(uint8_t *ptr);
PdfDocument *pdf_document_open(const char *path, int32_t *error_code);
void pdf_document_free(PdfDocument *handle);
int32_t pdf_document_get_page_count(PdfDocument *handle, int32_t *error_code);
void pdf_document_get_version(const PdfDocument *handle, uint8_t *major, uint8_t *minor);
bool pdf_document_has_structure_tree(PdfDocument *handle);
char *pdf_document_extract_text(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_extract_structured_to_json(PdfDocument *handle,
                                              int32_t page_index,
                                              int32_t *error_code);
char *pdf_document_to_markdown(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_to_html(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_to_plain_text(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_to_markdown_all(PdfDocument *handle, int32_t *error_code);
Pdf *pdf_from_markdown(const char *markdown, int32_t *error_code);
Pdf *pdf_from_html(const char *html, int32_t *error_code);
Pdf *pdf_from_text(const char *text, int32_t *error_code);
int32_t pdf_save(Pdf *handle, const char *path, int32_t *error_code);
uint8_t *pdf_save_to_bytes(Pdf *handle, int32_t *data_len, int32_t *error_code);
void pdf_free(Pdf *handle);
PdfDocument *pdf_document_open_from_bytes(const uint8_t *data, uintptr_t len, int32_t *error_code);
PdfDocument *pdf_document_open_with_password(const char *path,
                                             const char *password,
                                             int32_t *error_code);
bool pdf_document_is_encrypted(const PdfDocument *handle);
bool pdf_document_authenticate(PdfDocument *handle, const char *password, int32_t *error_code);
char *pdf_document_to_html_all(PdfDocument *handle, int32_t *error_code);
char *pdf_document_to_plain_text_all(PdfDocument *handle, int32_t *error_code);
FfiCharList *pdf_document_extract_chars(PdfDocument *handle,
                                        int32_t page_index,
                                        int32_t *error_code);
int32_t pdf_oxide_char_count(const FfiCharList *chars);
uint32_t pdf_oxide_char_get_char(const FfiCharList *chars, int32_t index, int32_t *error_code);
void pdf_oxide_char_get_bbox(const FfiCharList *chars,
                             int32_t index,
                             float *x,
                             float *y,
                             float *w,
                             float *h,
                             int32_t *error_code);
char *pdf_oxide_char_get_font_name(const FfiCharList *chars, int32_t index, int32_t *error_code);
float pdf_oxide_char_get_font_size(const FfiCharList *chars, int32_t index, int32_t *error_code);
void pdf_oxide_char_list_free(FfiCharList *handle);
FfiWordList *pdf_document_extract_words(PdfDocument *handle,
                                        int32_t page_index,
                                        int32_t *error_code);
int32_t pdf_oxide_word_count(const FfiWordList *words);
char *pdf_oxide_word_get_text(const FfiWordList *words, int32_t index, int32_t *error_code);
void pdf_oxide_word_get_bbox(const FfiWordList *words,
                             int32_t index,
                             float *x,
                             float *y,
                             float *w,
                             float *h,
                             int32_t *error_code);
char *pdf_oxide_word_get_font_name(const FfiWordList *words, int32_t index, int32_t *error_code);
float pdf_oxide_word_get_font_size(const FfiWordList *words, int32_t index, int32_t *error_code);
bool pdf_oxide_word_is_bold(const FfiWordList *words, int32_t index, int32_t *error_code);
void pdf_oxide_word_list_free(FfiWordList *handle);
FfiTextLineList *pdf_document_extract_text_lines(PdfDocument *handle,
                                                 int32_t page_index,
                                                 int32_t *error_code);
int32_t pdf_oxide_line_count(const FfiTextLineList *lines);
char *pdf_oxide_line_get_text(const FfiTextLineList *lines, int32_t index, int32_t *error_code);
void pdf_oxide_line_get_bbox(const FfiTextLineList *lines,
                             int32_t index,
                             float *x,
                             float *y,
                             float *w,
                             float *h,
                             int32_t *error_code);
int32_t pdf_oxide_line_get_word_count(const FfiTextLineList *lines,
                                      int32_t index,
                                      int32_t *error_code);
void pdf_oxide_line_list_free(FfiTextLineList *handle);
FfiTableList *pdf_document_extract_tables(PdfDocument *handle,
                                          int32_t page_index,
                                          int32_t *error_code);
int32_t pdf_oxide_table_count(const FfiTableList *tables);
int32_t pdf_oxide_table_get_row_count(const FfiTableList *tables,
                                      int32_t index,
                                      int32_t *error_code);
int32_t pdf_oxide_table_get_col_count(const FfiTableList *tables,
                                      int32_t index,
                                      int32_t *error_code);
char *pdf_oxide_table_get_cell_text(const FfiTableList *tables,
                                    int32_t table_index,
                                    int32_t row,
                                    int32_t col,
                                    int32_t *error_code);
bool pdf_oxide_table_has_header(const FfiTableList *tables, int32_t index, int32_t *error_code);
void pdf_oxide_table_list_free(FfiTableList *handle);