dart/lib/pdf_oxide.dart

// pdf_oxide — idiomatic Dart bindings over the C ABI via dart:ffi.
//
// Loads the native cdylib (libpdf_oxide.{so,dylib,dll}) at runtime and exposes
// PdfDocument (extraction) + Pdf (builder). Handles are freed by NativeFinalizer
// (and explicit close()); C strings/buffers are copied to Dart and freed via
// free_string. C-ABI error codes are thrown as PdfOxideError.
//
// API surface mirrors the other language bindings; coverage is asserted by
// test/api_coverage_test.dart (one test per public method).
import 'dart:ffi';
import 'dart:io';
import 'dart:typed_data';

import 'package:ffi/ffi.dart';

/// Thrown on any non-success C-ABI error code.
class PdfOxideError implements Exception {
  PdfOxideError(this.code, this.op);
  final int code;
  final String op;
  @override
  String toString() => 'PdfOxideError: $op failed (error code $code)';
}

// ── native signatures ────────────────────────────────────────────────────────
typedef _OpenC = Pointer<Void> Function(Pointer<Utf8>, Pointer<Int32>);
typedef _OpenBytesC = Pointer<Void> Function(
    Pointer<Uint8>, IntPtr, Pointer<Int32>);
typedef _OpenPwC = Pointer<Void> Function(
    Pointer<Utf8>, Pointer<Utf8>, Pointer<Int32>);
typedef _FreeC = Void Function(Pointer<Void>);
typedef _FreeD = void Function(Pointer<Void>);
typedef _PageCountC = Int32 Function(Pointer<Void>, Pointer<Int32>);
typedef _PageCountD = int Function(Pointer<Void>, Pointer<Int32>);
typedef _VersionC = Void Function(
    Pointer<Void>, Pointer<Uint8>, Pointer<Uint8>);
typedef _VersionD = void Function(
    Pointer<Void>, Pointer<Uint8>, Pointer<Uint8>);
typedef _BoolC = Bool Function(Pointer<Void>);
typedef _BoolD = bool Function(Pointer<Void>);
typedef _TextC = Pointer<Utf8> Function(Pointer<Void>, Int32, Pointer<Int32>);
typedef _TextD = Pointer<Utf8> Function(Pointer<Void>, int, Pointer<Int32>);
typedef _TextAllC = Pointer<Utf8> Function(Pointer<Void>, Pointer<Int32>);
typedef _TextAllD = Pointer<Utf8> Function(Pointer<Void>, Pointer<Int32>);
typedef _AuthC = Bool Function(Pointer<Void>, Pointer<Utf8>, Pointer<Int32>);
typedef _AuthD = bool Function(Pointer<Void>, Pointer<Utf8>, Pointer<Int32>);
typedef _FromStrC = Pointer<Void> Function(Pointer<Utf8>, Pointer<Int32>);
typedef _SaveC = Int32 Function(Pointer<Void>, Pointer<Utf8>, Pointer<Int32>);
typedef _SaveD = int Function(Pointer<Void>, Pointer<Utf8>, Pointer<Int32>);
typedef _SaveBytesC = Pointer<Uint8> Function(
    Pointer<Void>, Pointer<Int32>, Pointer<Int32>);
typedef _SaveBytesD = Pointer<Uint8> Function(
    Pointer<Void>, Pointer<Int32>, Pointer<Int32>);
typedef _FreeStringC = Void Function(Pointer<Utf8>);
typedef _FreeStringD = void Function(Pointer<Utf8>);
typedef _FreeBytesC = Void Function(Pointer<Uint8>);
typedef _FreeBytesD = void Function(Pointer<Uint8>);

// element-extraction (Phase 1): each list is opened on a document handle, read
// element-by-element, then freed once with its `*_list_free`.
typedef _ExtractC = Pointer<Void> Function(
    Pointer<Void>, Int32, Pointer<Int32>);
typedef _ExtractD = Pointer<Void> Function(Pointer<Void>, int, Pointer<Int32>);
typedef _ListCountC = Int32 Function(Pointer<Void>);
typedef _ListCountD = int Function(Pointer<Void>);
typedef _ListStrC = Pointer<Utf8> Function(
    Pointer<Void>, Int32, Pointer<Int32>);
typedef _ListStrD = Pointer<Utf8> Function(Pointer<Void>, int, Pointer<Int32>);
typedef _ListF32C = Float Function(Pointer<Void>, Int32, Pointer<Int32>);
typedef _ListF32D = double Function(Pointer<Void>, int, Pointer<Int32>);
typedef _ListI32C = Int32 Function(Pointer<Void>, Int32, Pointer<Int32>);
typedef _ListI32D = int Function(Pointer<Void>, int, Pointer<Int32>);
typedef _ListU32C = Uint32 Function(Pointer<Void>, Int32, Pointer<Int32>);
typedef _ListU32D = int Function(Pointer<Void>, int, Pointer<Int32>);
typedef _ListBoolC = Bool Function(Pointer<Void>, Int32, Pointer<Int32>);
typedef _ListBoolD = bool Function(Pointer<Void>, int, Pointer<Int32>);
typedef _ListBboxC = Void Function(Pointer<Void>, Int32, Pointer<Float>,
    Pointer<Float>, Pointer<Float>, Pointer<Float>, Pointer<Int32>);
typedef _ListBboxD = void Function(Pointer<Void>, int, Pointer<Float>,
    Pointer<Float>, Pointer<Float>, Pointer<Float>, Pointer<Int32>);
typedef _ListFreeC = Void Function(Pointer<Void>);
typedef _ListFreeD = void Function(Pointer<Void>);
typedef _CellC = Pointer<Utf8> Function(
    Pointer<Void>, Int32, Int32, Int32, Pointer<Int32>);
typedef _CellD = Pointer<Utf8> Function(
    Pointer<Void>, int, int, int, Pointer<Int32>);

/// Resolved native library + bound functions (loaded once).
class _Native {
  _Native(this.lib)
      : open = lib.lookupFunction<_OpenC, _OpenD>('pdf_document_open'),
        openBytes = lib.lookupFunction<_OpenBytesC, _OpenBytesD>(
            'pdf_document_open_from_bytes'),
        openPw = lib.lookupFunction<_OpenPwC, _OpenPwD>(
            'pdf_document_open_with_password'),
        docFree = lib.lookupFunction<_FreeC, _FreeD>('pdf_document_free'),
        pageCount = lib.lookupFunction<_PageCountC, _PageCountD>(
            'pdf_document_get_page_count'),
        version = lib
            .lookupFunction<_VersionC, _VersionD>('pdf_document_get_version'),
        isEncrypted =
            lib.lookupFunction<_BoolC, _BoolD>('pdf_document_is_encrypted'),
        hasTree = lib
            .lookupFunction<_BoolC, _BoolD>('pdf_document_has_structure_tree'),
        extractText =
            lib.lookupFunction<_TextC, _TextD>('pdf_document_extract_text'),
        toPlain =
            lib.lookupFunction<_TextC, _TextD>('pdf_document_to_plain_text'),
        toMd = lib.lookupFunction<_TextC, _TextD>('pdf_document_to_markdown'),
        toHtml = lib.lookupFunction<_TextC, _TextD>('pdf_document_to_html'),
        toMdAll = lib.lookupFunction<_TextAllC, _TextAllD>(
            'pdf_document_to_markdown_all'),
        toHtmlAll = lib
            .lookupFunction<_TextAllC, _TextAllD>('pdf_document_to_html_all'),
        toPlainAll = lib.lookupFunction<_TextAllC, _TextAllD>(
            'pdf_document_to_plain_text_all'),
        authenticate =
            lib.lookupFunction<_AuthC, _AuthD>('pdf_document_authenticate'),
        structJson = lib.lookupFunction<_TextC, _TextD>(
            'pdf_document_extract_structured_to_json'),
        fromMarkdown =
            lib.lookupFunction<_FromStrC, _OpenD>('pdf_from_markdown'),
        fromHtml = lib.lookupFunction<_FromStrC, _OpenD>('pdf_from_html'),
        fromText = lib.lookupFunction<_FromStrC, _OpenD>('pdf_from_text'),
        pdfFree = lib.lookupFunction<_FreeC, _FreeD>('pdf_free'),
        save = lib.lookupFunction<_SaveC, _SaveD>('pdf_save'),
        saveBytes =
            lib.lookupFunction<_SaveBytesC, _SaveBytesD>('pdf_save_to_bytes'),
        freeString =
            lib.lookupFunction<_FreeStringC, _FreeStringD>('free_string'),
        freeBytes = lib.lookupFunction<_FreeBytesC, _FreeBytesD>('free_bytes'),
        // chars
        extractChars = lib
            .lookupFunction<_ExtractC, _ExtractD>('pdf_document_extract_chars'),
        charCount = lib
            .lookupFunction<_ListCountC, _ListCountD>('pdf_oxide_char_count'),
        charGetChar =
            lib.lookupFunction<_ListU32C, _ListU32D>('pdf_oxide_char_get_char'),
        charGetBbox = lib
            .lookupFunction<_ListBboxC, _ListBboxD>('pdf_oxide_char_get_bbox'),
        charGetFontName = lib.lookupFunction<_ListStrC, _ListStrD>(
            'pdf_oxide_char_get_font_name'),
        charGetFontSize = lib.lookupFunction<_ListF32C, _ListF32D>(
            'pdf_oxide_char_get_font_size'),
        charListFree = lib
            .lookupFunction<_ListFreeC, _ListFreeD>('pdf_oxide_char_list_free'),
        // words
        extractWords = lib
            .lookupFunction<_ExtractC, _ExtractD>('pdf_document_extract_words'),
        wordCount = lib
            .lookupFunction<_ListCountC, _ListCountD>('pdf_oxide_word_count'),
        wordGetText =
            lib.lookupFunction<_ListStrC, _ListStrD>('pdf_oxide_word_get_text'),
        wordGetBbox = lib
            .lookupFunction<_ListBboxC, _ListBboxD>('pdf_oxide_word_get_bbox'),
        wordGetFontName = lib.lookupFunction<_ListStrC, _ListStrD>(
            'pdf_oxide_word_get_font_name'),
        wordGetFontSize = lib.lookupFunction<_ListF32C, _ListF32D>(
            'pdf_oxide_word_get_font_size'),
        wordIsBold = lib
            .lookupFunction<_ListBoolC, _ListBoolD>('pdf_oxide_word_is_bold'),
        wordListFree = lib
            .lookupFunction<_ListFreeC, _ListFreeD>('pdf_oxide_word_list_free'),
        // text lines
        extractLines = lib.lookupFunction<_ExtractC, _ExtractD>(
            'pdf_document_extract_text_lines'),
        lineCount = lib
            .lookupFunction<_ListCountC, _ListCountD>('pdf_oxide_line_count'),
        lineGetText =
            lib.lookupFunction<_ListStrC, _ListStrD>('pdf_oxide_line_get_text'),
        lineGetBbox = lib
            .lookupFunction<_ListBboxC, _ListBboxD>('pdf_oxide_line_get_bbox'),
        lineGetWordCount = lib.lookupFunction<_ListI32C, _ListI32D>(
            'pdf_oxide_line_get_word_count'),
        lineListFree = lib
            .lookupFunction<_ListFreeC, _ListFreeD>('pdf_oxide_line_list_free'),
        // tables
        extractTables = lib.lookupFunction<_ExtractC, _ExtractD>(
            'pdf_document_extract_tables'),
        tableCount = lib
            .lookupFunction<_ListCountC, _ListCountD>('pdf_oxide_table_count'),
        tableGetRowCount = lib.lookupFunction<_ListI32C, _ListI32D>(
            'pdf_oxide_table_get_row_count'),
        tableGetColCount = lib.lookupFunction<_ListI32C, _ListI32D>(
            'pdf_oxide_table_get_col_count'),
        tableGetCellText =
            lib.lookupFunction<_CellC, _CellD>('pdf_oxide_table_get_cell_text'),
        tableHasHeader = lib.lookupFunction<_ListBoolC, _ListBoolD>(
            'pdf_oxide_table_has_header'),
        tableListFree = lib.lookupFunction<_ListFreeC, _ListFreeD>(
            'pdf_oxide_table_list_free');

  final DynamicLibrary lib;
  final _OpenD open;
  final _OpenBytesD openBytes;
  final _OpenPwD openPw;
  final _FreeD docFree;
  final _PageCountD pageCount;
  final _VersionD version;
  final _BoolD isEncrypted;
  final _BoolD hasTree;
  final _TextD extractText, toPlain, toMd, toHtml, structJson;
  final _TextAllD toMdAll, toHtmlAll, toPlainAll;
  final _AuthD authenticate;
  final _OpenD fromMarkdown, fromHtml, fromText;
  final _FreeD pdfFree;
  final _SaveD save;
  final _SaveBytesD saveBytes;
  final _FreeStringD freeString;
  final _FreeBytesD freeBytes;
  // chars
  final _ExtractD extractChars;
  final _ListCountD charCount;
  final _ListU32D charGetChar;
  final _ListBboxD charGetBbox;
  final _ListStrD charGetFontName;
  final _ListF32D charGetFontSize;
  final _ListFreeD charListFree;
  // words
  final _ExtractD extractWords;
  final _ListCountD wordCount;
  final _ListStrD wordGetText;
  final _ListBboxD wordGetBbox;
  final _ListStrD wordGetFontName;
  final _ListF32D wordGetFontSize;
  final _ListBoolD wordIsBold;
  final _ListFreeD wordListFree;
  // text lines
  final _ExtractD extractLines;
  final _ListCountD lineCount;
  final _ListStrD lineGetText;
  final _ListBboxD lineGetBbox;
  final _ListI32D lineGetWordCount;
  final _ListFreeD lineListFree;
  // tables
  final _ExtractD extractTables;
  final _ListCountD tableCount;
  final _ListI32D tableGetRowCount;
  final _ListI32D tableGetColCount;
  final _CellD tableGetCellText;
  final _ListBoolD tableHasHeader;
  final _ListFreeD tableListFree;
}

typedef _OpenD = Pointer<Void> Function(Pointer<Utf8>, Pointer<Int32>);
typedef _OpenBytesD = Pointer<Void> Function(
    Pointer<Uint8>, int, Pointer<Int32>);
typedef _OpenPwD = Pointer<Void> Function(
    Pointer<Utf8>, Pointer<Utf8>, Pointer<Int32>);

_Native? _cached;
